# whitecrow

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tasks/: celery_app.py  investigation_tasks.py
whitecrow/: api.py  banner.py  cli.py  config.py  input_detector.py  models.py  orchestrator.py
whitecrow/bugbounty/: recon.py  report_generator.py
whitecrow/bugbounty/tools/: amass_wrapper.py  attack_wrapper.py  dnsx_wrapper.py  ffuf_wrapper.py  gobuster_wrapper.py  httpx_wrapper.py  nuclei_wrapper.py  subfinder_wrapper.py  wafw00f_wrapper.py  whatweb_wrapper.py
whitecrow/modules/: email_investigator.py  phone_investigator.py  photo_investigator.py  social_cross_referencer.py  username_investigator.py
whitecrow/templates/: index.html  report.html
whitecrow/tools/: emailrep_wrapper.py  exiftool_wrapper.py  ghunt_wrapper.py  hibp_wrapper.py  holehe_wrapper.py  maigret_wrapper.py  messaging_checker.py  phonenumbers_wrapper.py  reverse_image_search.py  sherlock_wrapper.py  theharvester_wrapper.py
